# QuantLM

./: .gitignore  LICENSE  MODEL_LINKS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  README.md  llama_build_info.cpp  llama_jni.cpp
app/src/main/cpp/llama-cpp/: .clang-format  .clang-tidy  .dockerignore  .ecrc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_lora_to_gguf.py  flake.nix  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
app/src/main/cpp/llama-cpp/.devops/: cann.Dockerfile  cpu.Dockerfile  cuda.Dockerfile  intel.Dockerfile  llama-cli-cann.Dockerfile  llama-cpp-cuda.srpm.spec  llama-cpp.srpm.spec  musa.Dockerfile  rocm.Dockerfile  s390x.Dockerfile  tools.sh  vulkan.Dockerfile
app/src/main/cpp/llama-cpp/.github/: labeler.yml  pull_request_template.md
app/src/main/cpp/llama-cpp/ci/: README-MUSA.md  README.md  run.sh
app/src/main/cpp/llama-cpp/cmake/: arm64-apple-clang.cmake  arm64-windows-llvm.cmake  build-info.cmake  common.cmake  llama-config.cmake.in  llama.pc.in  riscv64-spacemit-linux-gnu-gcc.cmake  x64-windows-llvm.cmake
app/src/main/cpp/llama-cpp/common/: CMakeLists.txt  arg.cpp  arg.h  build-info.cpp.in  chat-parser-xml-toolcall.cpp  chat-parser-xml-toolcall.h  chat-parser.cpp  chat-parser.h  chat-peg-parser.cpp  chat-peg-parser.h  chat.cpp  chat.h  common.cpp  common.h  console.cpp  console.h  download.cpp  download.h  http.h  json-partial.cpp  json-partial.h  json-schema-to-grammar.cpp  json-schema-to-grammar.h  llguidance.cpp  log.cpp  log.h  ngram-cache.cpp  ngram-cache.h  peg-parser.cpp  peg-parser.h  preset.cpp  preset.h  regex-partial.cpp  regex-partial.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h  unicode.cpp  unicode.h
app/src/main/cpp/llama-cpp/docs/: android.md  build-riscv64-spacemit.md  build-s390x.md  build.md  docker.md  function-calling.md  install.md  llguidance.md  multimodal.md  ops.md
app/src/main/cpp/llama-cpp/examples/: CMakeLists.txt  convert_legacy_llama.py  json_schema_pydantic_example.py  json_schema_to_grammar.py  llama.vim  pydantic_models_to_grammar.py  pydantic_models_to_grammar_examples.py  reason-act.sh  regex_to_grammar.py  server-llama2-13B.sh  server_embd.py  ts-type-to-grammar.sh
app/src/main/cpp/llama-cpp/ggml/: .gitignore  CMakeLists.txt
app/src/main/cpp/llama-cpp/gguf-py/: README.md  pyproject.toml
app/src/main/cpp/llama-cpp/grammars/: README.md  arithmetic.gbnf  c.gbnf  chess.gbnf  english.gbnf  japanese.gbnf  json.gbnf  json_arr.gbnf  list.gbnf
app/src/main/cpp/llama-cpp/include/: llama-cpp.h  llama.h
app/src/main/cpp/llama-cpp/licenses/: LICENSE-curl  LICENSE-jsonhpp  LICENSE-linenoise
app/src/main/cpp/llama-cpp/models/: ggml-vocab-bert-bge.gguf.out  ggml-vocab-command-r.gguf.inp  ggml-vocab-command-r.gguf.out  ggml-vocab-deepseek-coder.gguf.out  ggml-vocab-deepseek-llm.gguf.out  ggml-vocab-falcon.gguf.out  ggml-vocab-gpt-2.gguf.out  ggml-vocab-llama-bpe.gguf.out  ggml-vocab-mpt.gguf.out  ggml-vocab-phi-3.gguf.out  ggml-vocab-qwen2.gguf.out  ggml-vocab-refact.gguf.out  ggml-vocab-starcoder.gguf.out
app/src/main/cpp/llama-cpp/pocs/: CMakeLists.txt
app/src/main/cpp/llama-cpp/requirements/: requirements-all.txt  requirements-compare-llama-bench.txt  requirements-convert_hf_to_gguf.txt  requirements-convert_hf_to_gguf_update.txt  requirements-convert_legacy_llama.txt  requirements-convert_lora_to_gguf.txt  requirements-gguf_editor_gui.txt  requirements-pydantic.txt  requirements-server-bench.txt  requirements-test-tokenizer-random.txt  requirements-tool_bench.txt
app/src/main/cpp/llama-cpp/scripts/: bench-models.sh  build-info.sh  check-requirements.sh  compare-commits.sh  compare-llama-bench.py  compare-logprobs.py  create_ops_docs.py  debug-test.sh  fetch_server_test_models.py  gen-authors.sh  gen-unicode-data.py  get-flags.mk  get-hellaswag.sh  get-pg.sh  get-wikitext-103.sh  get-wikitext-2.sh  get-winogrande.sh  get_chat_template.py  hf.sh  serve-static.js  server-bench.py  sync-ggml-am.sh  sync-ggml.last  sync-ggml.sh  sync_vendor.py  tool_bench.py  tool_bench.sh  verify-checksum-models.py  xxd.cmake
app/src/main/cpp/llama-cpp/src/: CMakeLists.txt  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-cparams.cpp  llama-cparams.h  llama-grammar.cpp  llama-grammar.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-io.cpp  llama-io.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.cpp  llama-memory.h  llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  llama-model-loader.h  llama-model-saver.cpp  llama-model-saver.h  (+12 more)
app/src/main/cpp/llama-cpp/tests/: .gitignore  CMakeLists.txt  get-model.cpp  get-model.h  run-json-schema-to-grammar.mjs  test-alloc.cpp  test-arg-parser.cpp  test-autorelease.cpp  test-backend-ops.cpp  test-barrier.cpp  test-c.c  test-chat-parser.cpp  test-chat-peg-parser.cpp  test-chat-template.cpp  test-chat.cpp  test-double-float.cpp  test-gbnf-validator.cpp  test-gguf.cpp  test-grammar-integration.cpp  test-grammar-llguidance.cpp  test-grammar-parser.cpp  test-json-partial.cpp  test-json-schema-to-grammar.cpp  test-llama-grammar.cpp  test-log.cpp  test-lora-conversion-inference.sh  test-model-load-cancel.cpp  test-mtmd-c-api.c  test-opt.cpp  test-peg-parser.cpp  test-quantize-fns.cpp  test-quantize-perf.cpp  test-quantize-stats.cpp  test-regex-partial.cpp  test-rope.cpp  test-sampling.cpp  test-state-restore-fragmented.cpp  test-thread-safety.cpp  test-tokenizer-0.cpp  test-tokenizer-0.py  (+5 more)
app/src/main/cpp/llama-cpp/tools/: CMakeLists.txt
(+1778 files in other folders)
